Added a thing that wasn't translated in the Remote; Updated Italian in the Remote; Renamed es to es-mx in the Remote.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6226 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/en/commonHeader.htm
+++ b/Remote/en/commonHeader.htm
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//w3C//DTD XHTML 1.0 Strict/EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1.strict.dtd">
- <html>
-         <head>
-  	                 <meta http-equiv="refresh" content="60">
-  	                 <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
+<html>
+		<head>
+		<meta http-equiv="refresh" content="60">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Shareaza's P2P Web Interface</title>
 		<link rel="stylesheet" type="text/css" href="images/shareaza.css" media="screen" />
 		<script src="images/shareaza.js" type="text/javascript"><!--//--></script>
@@ -25,7 +25,7 @@
 		</style>
 		
 	</head>
-	<body >
+	<body>
 		<h1>Shareaza</h1>
 		<h2 id="logout"><a href="/remote/logout">Log out</a></h2>
 <!-- /commonHeader -->
