--- a/Remote/en/downloadsTop.htm
+++ b/Remote/en/downloadsTop.htm
@@ -1,4 +1,4 @@
-
+﻿
 <!-- downloadsTop-->
 </ul>
 <div  id="content">
@@ -14,7 +14,7 @@
 						<input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>>
 						<label for="filter_sources">No sources</label>
 						<input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>>
-						<label for="filter_paused">paused</label>
+						<label for="filter_paused">Paused</label>
 						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>>
 						<label for="filter_show_all">Show all sources</label>
 						<input type="submit" value=" Set "><br />
