--- a/Remote/en/home.htm
+++ b/Remote/en/home.htm
@@ -1,4 +1,4 @@
-		<!-- tabs -->
+﻿		<!-- tabs -->
 		<div class="poetry">
 			<ul class="tabs">
 				<li class="active"><a href="home" class="noline">Home</a></li>
@@ -11,8 +11,7 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>Welcome to <b>the Shareaza Web Interface</b>.</p>
-			<p>This web interface allows you to control searches, downloads, uploads and network connections.</p>
+			<p>Welcome to <b>the Shareaza Web Interface.</b></p> <p>This web interface allows you to control searches, downloads, uploads and network connections.</p>
 			<div style="float: right; width: 40em;">
 				<h3>Start downloading:</h3>
 				<div style="text-align: right;">
