--- a/Remote/en/login.htm
+++ b/Remote/en/login.htm
@@ -1,4 +1,4 @@
-<!-- tabs -->
+﻿<!-- tabs -->
 		<div class="poetry">
 			<ul class="tabs">
 				<li class="inactive">Home</li>
@@ -12,14 +12,11 @@
 <!-- main body -->
 		<div class="poetry" id="frame">
 					<div class="padding left">
-						Welcome to <b>the Shareaza Web Interface.</b>
-						If this is your Shareaza client's address, please insert your 
-						username and password, and click the <b>Login</b> button.
+						Welcome to <b>the Shareaza Web Interface.</b> If this is your Shareaza client's address, please insert your username and password, and click the <b>Login</b> button.
 					</div>
 					
 					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
-					<%? failure %>	The username or password was incorrect,
-						Please try again.<%?%>
+					<%? failure %>	The username or password was incorrect, please try again.<%?%>
 					</div>
 					
 					<div style="text-align: right; width: 24em; margin: 0 auto;">
