--- a/Remote/en/networkNetStart.htm
+++ b/Remote/en/networkNetStart.htm
@@ -1,4 +1,4 @@
-					<h4><%= network_caption %></h4>
+﻿					<h4><%= network_caption %></h4>
 <%? !network_connected %>
 					<p>
 					This network is <strong>not</strong> enabled -
