--- a/Remote/en/searchRowStart.htm
+++ b/Remote/en/searchRowStart.htm
@@ -1,4 +1,4 @@
-<!-- searchRowStart-->
+﻿<!-- searchRowStart-->
 									<tr>
 <%? row_collapsed %>
 										<td class="filename"><div title="<%= row_filename %>"><a class="noline" href="?id=<%= search_id %>&amp;expcol=<%= row_urn %>&amp;expand=1">+</a> <a class="noline" href="?id=<%= search_id %>&amp;download=<%= row_urn %>"><%= row_filename %></a></div></td>
