--- a/Remote/en/searchTab.htm
+++ b/Remote/en/searchTab.htm
@@ -1,4 +1,4 @@
-<!--searchTab-->
+﻿<!--searchTab-->
 <%? search_selected %>
 										<li class="active"><%= search_caption %></li>
 <%?%><%? !search_selected %>
