--- a/Remote/en/searchTop.htm
+++ b/Remote/en/searchTop.htm
@@ -1,10 +1,10 @@
-
+﻿
 <!-- searchTop -->
 										<li class="active"><a class="noline" href="?id=0">New Search</a></li>
 								</ul>
 
 <div style="border: 1px #000 solid;padding: 5px;" id="content">
-	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">Refresh Page</a> - 
+	<div id="functions"><a href="?id=<%= search_id %>&amp;refresh=<%= random %>">Refresh page</a> - 
 <%? searching %>
 												<a href="?id=<%= search_id %>&amp;stop=1"><b>Stop Searching</b></a> -
 <%?%>
