--- a/Remote/en/uploadsHeader.htm
+++ b/Remote/en/uploadsHeader.htm
@@ -1,4 +1,4 @@
-<!-- uploadsHeader -->
+﻿<!-- uploadsHeader -->
 		<!-- tabs -->
 		<div class="poetry">
 			<ul class="tabs">
@@ -12,6 +12,6 @@
 		<!-- /tabs -->
 			<div id="frame">
 			<div id="functions">
-						<a href="?refresh=<%= random %>">Refresh Page</a>
+						<a href="?refresh=<%= random %>">Refresh page</a>
 			</div>
 <!-- /uploadsHeader -->
