--- a/Remote/it/downloadsSource.htm
+++ b/Remote/it/downloadsSource.htm
@@ -7,6 +7,6 @@
 										<td><%= source_status %></td>
 										<td>
 											<a href="?modify_id=<%= source_id %>&modify_action=access">Accedi</a> -
-											<a href="?modify_id=<%= source_id %>&modify_action=forget">Abbandona</a>
+											<a href="?modify_id=<%= source_id %>&modify_action=forget">Rimuovi</a>
 										</td>
 									</tr>
