--- a/Remote/it/downloadsTop.htm
+++ b/Remote/it/downloadsTop.htm
@@ -17,7 +17,7 @@
 						<label for="filter_paused">In pausa</label>
 						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>>
 						<label for="filter_show_all">Mostra tutte le fonti</label>
-						<input type="submit" value=" Seleziona "><br />
+						<input type="submit" value=" Imposta "><br />
 			</form>
 		</div>
 		<br />
