--- a/Remote/it/home.htm
+++ b/Remote/it/home.htm
@@ -11,8 +11,7 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>"Benvenuto nell'<b>Interfaccia web di Shareaza</b>.
-      			<p>Questa interfaccia web ti permette di controllare le ricerche, i download, gli upload e la connessione alla rete.</p>"</p>
+			<p>Benvenuto nell'<b>Interfaccia web di Shareaza.</b></p> <p>Questa interfaccia web ti permette di controllare le ricerche, i download, gli upload e la connessione alla rete.</p>
 			<div style="float: right; width: 40em;">
 				<h3>Inizia il download:</h3>
 				<div style="text-align: right;">
@@ -36,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Documento di testo</option>
 					</select>
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="Vai">
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>Scarica magnet/torrent:</label>
 					<input type="text" name="uri" size="35">
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="Vai">
 				</form>
 				</div>
 			</div>
