--- a/Remote/it/login.htm
+++ b/Remote/it/login.htm
@@ -12,13 +12,11 @@
 <!-- main body -->
 		<div class="poetry" id="frame">
 					<div class="padding left">
-						Benvenuti nell'<b>Accesso Remoto di Shareaza.</b><br/>
-      						Se questa copia di Shareaza è in esecuzione sul tuo PC, 
-      						immetti i relativi username e password, poi clicca su <b>Login</b>.
+						Benvenuto nell'<b>Interfaccia web di Shareaza.</b> Se questa copia di Shareaza è in esecuzione sul tuo PC, immetti i relativi username e password, poi clicca su <b>Login</b>.
 					</div>
 					
 					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
-					<%? failure %>	L'username e la password immessi non sono validi,<%?%>
+					<%? failure %>	Il nome utente o la password immessi non sono corretti, riprova ancora.<%?%>
 					</div>
 					
 					<div style="text-align: right; width: 24em; margin: 0 auto;">
