--- a/Remote/it/searchNew.htm
+++ b/Remote/it/searchNew.htm
@@ -1,9 +1,7 @@
 ﻿										<li class="active"><a class="noline" href="?id=0">Nuova ricerca</a></li>
 								</ul>
 <div style="border: 1px #000 solid;padding: 5px;">
-			<p>Per iniziare una nuova ricerca, immetti i dati nella casella <strong>Ricerca</strong> e clicca su <strong>Inizia 
-      				Ricerca</strong>. Se desideri restringere la tua ricerca a un tipo particolare di file, 
-      			selezionalo dall'elenco.</p>
+			<p>Per iniziare una nuova ricerca, immetti il termine da cercare nel box sotto e fai click su <strong>Inizia ricerca</strong>. Se desideri restringere la tua ricerca a un tipo particolare di file, selezionalo dall'elenco (raccomandato).</p>
 	
 	<div style="text-align:right; width: 30em;">		
 		<form method="get" action="newsearch">
