--- a/Remote/lt/downloadsTop.htm
+++ b/Remote/lt/downloadsTop.htm
@@ -1,4 +1,4 @@
-
+﻿
 <!-- downloadsTop-->
 </ul>
 <div  id="content">
@@ -17,7 +17,7 @@
 						<label for="filter_paused">Pristabdyta</label>
 						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>>
 						<label for="filter_show_all">Rodyti viską</label>
-						<input type="submit" value=" Nustatyti "><br />
+						<input type="submit" value=" Set "><br />
 			</form>
 		</div>
 		<br />
