--- a/Remote/lt/login.htm
+++ b/Remote/lt/login.htm
@@ -1,4 +1,4 @@
-<!-- tabs -->
+﻿<!-- tabs -->
 		<div class="poetry">
 			<ul class="tabs">
 				<li class="inactive">Pradžia</li>
@@ -12,14 +12,11 @@
 <!-- main body -->
 		<div class="poetry" id="frame">
 					<div class="padding left">
-						Sveiki! Čia <b>„Shareaza“ nuotolinė prieiga</b>.
-						Jei ši „Shareaza“ kopija veikia jūsų kompiuteryje, įveskite savo 
-						nuotolinės prieigos naudotojo vardą bei slaptažodį ir paspauskite <b>Įėjimas</b>.
+						Sveiki! Čia <b>„Shareaza“ nuotolinė prieiga.</b> Jei ši „Shareaza“ kopija veikia jūsų kompiuteryje, įveskite savo nuotolinės prieigos naudotojo vardą bei slaptažodį ir paspauskite <b>Įėjimas</b>.
 					</div>
 					
 					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
-					<%? failure %>	Suvestas naudotojo vardas ar slaptažodis yra neteisingas.
-						Bandykite dar kartą.<%?%>
+					<%? failure %>	Suvestas naudotojo vardas ar slaptažodis yra neteisingas. Bandykite dar kartą.<%?%>
 					</div>
 					
 					<div style="text-align: right; width: 24em; margin: 0 auto;">
