--- a/Remote/lt/networkNetStart.htm
+++ b/Remote/lt/networkNetStart.htm
@@ -1,4 +1,4 @@
-					<h4><%= network_caption %></h4>
+﻿					<h4><%= network_caption %></h4>
 <%? !network_connected %>
 					<p>
 					Šis tinklas <strong>nėra</strong> įgalintas -
