--- a/Remote/lt/searchNew.htm
+++ b/Remote/lt/searchNew.htm
@@ -1,9 +1,8 @@
-										<li class="active"><a class="noline" href="?id=0">Nauja paieška</a></li>
+﻿										<li class="active"><a class="noline" href="?id=0">Nauja paieška</a></li>
 								</ul>
 <div style="border: 1px #000 solid;padding: 5px;">
-			<p>Naujos paieškos vykdymui įrašykite ieškinį į žemiau esantį laukelį ir paspauskite <strong>Pradėti 
-				paiešką</strong>. Jei norite apriboti paiešką kokiu nors failo tipu, pasirinkite jį iš sąrašo (rekomenduojama).</p>
-
+			<p>Naujos paieškos vykdymui įrašykite ieškinį į žemiau esantį laukelį ir paspauskite <strong>Pradėti paiešką</strong>. Jei norite apriboti paiešką kokiu nors failo tipu, pasirinkite jį iš sąrašo (rekomenduojama).</p>
+	
 	<div style="text-align:right; width: 30em;">		
 		<form method="get" action="newsearch">
 
