--- a/Remote/pt-br/home.htm
+++ b/Remote/pt-br/home.htm
@@ -11,7 +11,7 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>Bem-Vindo a <b>Interface Web do Shareaza</b>.<p>Esta interface web permite a você controlar as buscas, downloads, uploads e conexões de rede.</p>.</p>
+			<p>Bem-Vindo a <b>Interface Web do Shareaza.</b></p> <p>Esta interface web permite a você controlar as buscas, downloads, uploads e conexões de rede.</p>
 			<div style="float: right; width: 40em;">
 				<h3>Iniciar o Download:</h3>
 				<div style="text-align: right;">
@@ -35,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">Vídeo</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Processamento de Palavras</option>
 					</select>
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="Ir">
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>Baixar Magnet/Torrent</label>
 					<input type="text" name="uri" size="35">
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="Ir">
 				</form>
 				</div>
 			</div>
