--- a/Remote/pt-br/login.htm
+++ b/Remote/pt-br/login.htm
@@ -12,8 +12,7 @@
 <!-- main body -->
 		<div class="poetry" id="frame">
 					<div class="padding left">
-						Bem-Vindo a <b>Interface Web do Shareaza.</b>
-       se este é o endereço do seu cliente Shareaza, por favor insira o seu nome de usuário e senha, e clique em <b>Login</b>
+						Bem-Vindo a <b>Interface Web do Shareaza.</b> se este é o endereço do seu cliente Shareaza, por favor insira o seu nome de usuário e senha, e clique em <b>Login</b>.
 					</div>
 					
 					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
