--- a/Remote/chs/home.htm
+++ b/Remote/chs/home.htm
@@ -11,8 +11,7 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>欢迎来到 <b>Shareaza 远程访问</b>。</p>
-      <p>æ­¤ç½‘é¡µæŽ§åˆ¶å°ä¸ºæ‚¨æä¾›äº†å¯¹æœç´¢ï¼Œä¸‹è½½ï¼Œä¸Šä¼ ä»¥åŠç½‘ç»œè¿žæŽ¥çš„æŽ§åˆ¶ã€‚</p>
+			<p>欢迎来到 <b>Shareaza 远程访问。</b></p> <p>æ­¤ç½‘é¡µæŽ§åˆ¶å°ä¸ºæ‚¨æä¾›äº†å¯¹æœç´¢ï¼Œä¸‹è½½ï¼Œä¸Šä¼ ä»¥åŠç½‘ç»œè¿žæŽ¥çš„æŽ§åˆ¶ã€‚</p>
 			<div style="float: right; width: 40em;">
 				<h3>Start downloading:</h3>
 				<div style="text-align: right;">
@@ -36,22 +35,22 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">视频</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">字符处理</option>
 					</select>
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="开始">
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>下载 Magnet:</label>
 					<input type="text" name="uri" size="35">
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="开始">
 				</form>
 				</div>
 			</div>
 			<h3>Useful Links:</h3>
 			<ul>
-				<li><a href="http://www.peerweb.org/">Peerweb.org</a></li>
-				<li><a href="http://www.freebase.be/">Freebase.be</a></li>
-				<li><a href="http://www.g24u.net/">g24u.net</a></li>
-				<li><a href="http://www.bittorrent.com/">Bittorrent.com</a></li>
-				<li><a href="http://www.legaltorrents.com/">LegalTorrents.com</a></li>
-				<li><a href="http://content.emule-project.net/">eMule content DB</a></li>
+				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
+				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
+				<li><a href="http://www.g24u.net/" target="_blank">g24u.net</a></li>
+				<li><a href="http://www.bittorrent.com/" target="_blank">Bittorrent.com</a></li>
+				<li><a href="http://www.legaltorrents.com/" target="_blank">LegalTorrents.com</a></li>
+				<li><a href="http://content.emule-project.net/" target="_blank">eMule content DB</a></li>
 			</ul>
 		</div>
