--- a/Remote/en/searchNew.htm
+++ b/Remote/en/searchNew.htm
@@ -1,9 +1,7 @@
-										<li class="active"><a class="noline" href="?id=0">New Search</a></li>
+﻿										<li class="active"><a class="noline" href="?id=0">New Search</a></li>
 								</ul>
 <div style="border: 1px #000 solid;padding: 5px;">
-			<p>To start a new search, type your search term in the box below and click <strong>Start 
-				Search</strong>. If you want to restrict your search to a particular file type, 
-			select it from the list (recommended).</p>
+			<p>To start a new search, type your search term in the box below and click <strong>Start search</strong>. If you want to restrict your search to a particular file type, select it from the list (recommended).</p>
 	
 	<div style="text-align:right; width: 30em;">		
 		<form method="get" action="newsearch">
