--- a/Remote/lt/commonHeader.htm
+++ b/Remote/lt/commonHeader.htm
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//w3C//DTD XHTML 1.0 Strict/EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1.strict.dtd">
 <html>
-       <head>
+		<head>
 		<meta http-equiv="refresh" content="60">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>„Shareaza“ P2P nuotolinė prieiga</title>
