--- a/Remote/lt/searchColumn.htm
+++ b/Remote/lt/searchColumn.htm
@@ -1,3 +1,3 @@
-<!--searchColumn -->
+﻿<!--searchColumn -->
 										<th><a class="nolink" href="?id=<%= search_id %>&amp;sort=<%= column_id %>"><%= column_caption %></a></th>
 <!--/searchColumn-->
