--- a/Remote/lt/uploadsFile.htm
+++ b/Remote/lt/uploadsFile.htm
@@ -1,4 +1,4 @@
-<!-- uploadsFile -->
+﻿<!-- uploadsFile -->
 						<tr>
 							<td class="filename"><div title="<%= file_filename %>"><%= file_filename %></div></td>
 							<td class="filename"><div title="<%= file_user %>"><%= file_user %></div></td>
