--- a/Remote/lt/uploadsQueueStart.htm
+++ b/Remote/lt/uploadsQueueStart.htm
@@ -1,4 +1,4 @@
-<!-- uploadsQueueStart -->
+﻿<!-- uploadsQueueStart -->
 <%? !queue_expanded %>
 					<h4><a class="noline" href="?queue_expand=<%= queue_id %>">+ <%= queue_caption %></a>
 <%? queue_transfers %>
