Fixed the chinese in the remote (maybe)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6229 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/chs/home.htm
+++ b/Remote/chs/home.htm
@@ -11,7 +11,7 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>欢迎来到 <b>Shareaza 远程访问。</b></p> <p>æ­¤ç½‘é¡µæŽ§åˆ¶å°ä¸ºæ‚¨æä¾›äº†å¯¹æœç´¢ï¼Œä¸‹è½½ï¼Œä¸Šä¼ ä»¥åŠç½‘ç»œè¿žæŽ¥çš„æŽ§åˆ¶ã€‚</p>
+			<p>欢迎来到 <b>Shareaza 远程访问。</b></p> <p>此网页控制台为您提供了对搜索，下载，上传以及网络连接的控制。</p>
 			<div style="float: right; width: 40em;">
 				<h3>Start downloading:</h3>
 				<div style="text-align: right;">
