Updated by John
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6245 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/chs/commonHeader.htm
+++ b/Remote/chs/commonHeader.htm
@@ -27,5 +27,5 @@
 	</head>
 	<body>
 		<h1>Shareaza</h1>
-		<h2 id="logout"><a href="/remote/logout">Log out</a></h2>
+		<h2 id="logout"><a href="/remote/logout">登出</a></h2>
 <!-- /commonHeader -->
