--- a/Remote/chs/home.htm
+++ b/Remote/chs/home.htm
@@ -11,9 +11,9 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>欢迎来到 <b>Shareaza 远程访问。</b></p> <p>此网页控制台为您提供了对搜索，下载，上传以及网络连接的控制。</p>
+			<p>欢迎来到 <b>Shareaza 远程访问</b>。<p>该网络界面允许您控制搜索、下载、上传和网络连接。</p></p>
 			<div style="float: right; width: 40em;">
-				<h3>Start downloading:</h3>
+				<h3>开始下载:</h3>
 				<div style="text-align: right;">
 				<form method="get" action="newsearch" ID="Form1">
 					<label>快速搜索:</label>
@@ -31,20 +31,20 @@
 						<option value="http://www.shareaza.com/schemas/shareazaSkin.xsd">皮肤</option>
 						<option value="http://www.shareaza.com/schemas/sourceCode.xsd">源代码</option>
 						<option value="http://www.shareaza.com/schemas/spreadsheet.xsd">电子表格</option>
-						<option value="http://www.shareaza.com/schemas/subtitle.xsd">Subtitle</option>
+						<option value="http://www.shareaza.com/schemas/subtitle.xsd">字幕</option>
 						<option value="http://www.limewire.com/schemas/video.xsd">视频</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">字符处理</option>
 					</select>
 					<input type="submit" value="开始">
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
-					<label>下载 Magnet:</label>
+					<label>磁力/种子下载:</label>
 					<input type="text" name="uri" size="35">
 					<input type="submit" value="开始">
 				</form>
 				</div>
 			</div>
-			<h3>Useful Links:</h3>
+			<h3>可用链接:</h3>
 			<ul>
 				<li><a href="http://www.peerweb.org/" target="_blank">Peerweb.org</a></li>
 				<li><a href="http://www.freebase.be/" target="_blank">Freebase.be</a></li>
