--- a/Remote/chs/downloadsFooter.htm
+++ b/Remote/chs/downloadsFooter.htm
@@ -2,7 +2,7 @@
 <br>
 <form method="get" action="newdownload" ID="Form1">
 	<div>
-			<label>下载 Magnet:</label>
+			<label>磁力下载</label>
 			<input type="text" name="uri" size="50" />
 			<input type="submit" value="开始" />
 	</div>
