Fixed some xhtml errors.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6251 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/chs/home.htm
+++ b/Remote/chs/home.htm
@@ -11,13 +11,13 @@
 		<!-- /tabs -->
 <!-- main body -->
 		<div id="frame">
-			<p>欢迎来到 <b>Shareaza 远程访问</b>。<p>该网络界面允许您控制搜索、下载、上传和网络连接。</p></p>
+			<p>欢迎来到 <b>Shareaza 远程访问。</b></p> <p>该网络界面允许您控制搜索、下载、上传和网络连接。</p>
 			<div style="float: right; width: 40em;">
 				<h3>开始下载:</h3>
 				<div style="text-align: right;">
 				<form method="get" action="newsearch" ID="Form1">
 					<label>快速搜索:</label>
-					<input type="text" name="search" size="20">
+					<input type="text" name="search" size="20" />
 					<select name="schema">
 						<option value="">任何文件类型</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">程序</option>
@@ -35,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">视频</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">字符处理</option>
 					</select>
-					<input type="submit" value="开始">
+					<input type="submit" value="开始" />
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>磁力/种子下载:</label>
-					<input type="text" name="uri" size="35">
-					<input type="submit" value="开始">
+					<input type="text" name="uri" size="35" />
+					<input type="submit" value="开始" />
 				</form>
 				</div>
 			</div>
