--- a/Remote/chs/searchTop.htm
+++ b/Remote/chs/searchTop.htm
@@ -16,7 +16,7 @@
 											<input type="hidden" name="setfilter" value="1" />
 											<label>过滤:</label>
 											<input type="text" name="filter" value="<%= search_filter %>" size="20" />
-											<input type="submit" value="过滤:" />
+											<input type="submit" value="过滤" />
 
 										</form>
 		</div>
