--- a/Remote/en/home.htm
+++ b/Remote/en/home.htm
@@ -17,7 +17,7 @@
 				<div style="text-align: right;">
 				<form method="get" action="newsearch" ID="Form1">
 					<label>Quick search:</label>
-					<input type="text" name="search" size="20">
+					<input type="text" name="search" size="20" />
 					<select name="schema">
 						<option value="">Any file</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">Application</option>
@@ -35,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Word Processing</option>
 					</select>
-					<input type="submit" value="Go">
+					<input type="submit" value="Go" />
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>Magnet/Torrent download:</label>
-					<input type="text" name="uri" size="35">
-					<input type="submit" value="Go">
+					<input type="text" name="uri" size="35" />
+					<input type="submit" value="Go" />
 				</form>
 				</div>
 			</div>
