--- a/Remote/it/searchNew.htm
+++ b/Remote/it/searchNew.htm
@@ -7,7 +7,7 @@
 		<form method="get" action="newsearch">
 
 			<label>Ricerca:</label>
-					<input type="text" name="search" class="regularinput" /><br />
+					<input type="text" name="search" class="regularinput" /><br/>
 			<label>Tipo di file:</label>
 					
 						<select name="schema" class="regularinput">
@@ -15,6 +15,6 @@
 							<%= schema_option_list %>
 						</select>
 				<br />
-						<input type="submit" value="Inizia ricerca">
+						<input type="submit" value="Inizia ricerca" />
 		</form>
 	</div>
