--- a/Remote/lt/home.htm
+++ b/Remote/lt/home.htm
@@ -17,7 +17,7 @@
 				<div style="text-align: right;">
 				<form method="get" action="newsearch" ID="Form1">
 					<label>Greita paieška:</label>
-					<input type="text" name="search" size="20">
+					<input type="text" name="search" size="20" />
 					<select name="schema">
 						<option value="">Bet kokio tipo</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">Programa</option>
@@ -35,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">Vaizdo įrašai</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Dokumentas</option>
 					</select>
-					<input type="submit" value="Pirmyn">
+					<input type="submit" value="Pirmyn" />
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>Magnet/Torrent atsisiuntimas:</label>
-					<input type="text" name="uri" size="35">
-					<input type="submit" value="Pirmyn">
+					<input type="text" name="uri" size="35" />
+					<input type="submit" value="Pirmyn" />
 				</form>
 				</div>
 			</div>
