--- a/Remote/lt/searchNew.htm
+++ b/Remote/lt/searchNew.htm
@@ -7,7 +7,7 @@
 		<form method="get" action="newsearch">
 
 			<label>Ko ieškoti:</label>
-					<input type="text" name="search" class="regularinput" /><br />
+					<input type="text" name="search" class="regularinput" /><br/>
 			<label>Failo tipas:</label>
 					
 						<select name="schema" class="regularinput">
@@ -15,6 +15,6 @@
 							<%= schema_option_list %>
 						</select>
 				<br />
-						<input type="submit" value="Pradėti paiešką">
+						<input type="submit" value="Pradėti paiešką" />
 		</form>
 	</div>
