--- a/Remote/pt-br/home.htm
+++ b/Remote/pt-br/home.htm
@@ -17,7 +17,7 @@
 				<div style="text-align: right;">
 				<form method="get" action="newsearch" ID="Form1">
 					<label>Busca rápida</label>
-					<input type="text" name="search" size="20">
+					<input type="text" name="search" size="20" />
 					<select name="schema">
 						<option value="">Qualquer arquivo</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">Aplicação</option>
@@ -35,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">Vídeo</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Processamento de Palavras</option>
 					</select>
-					<input type="submit" value="Ir">
+					<input type="submit" value="Ir" />
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>Baixar Magnet/Torrent</label>
-					<input type="text" name="uri" size="35">
-					<input type="submit" value="Ir">
+					<input type="text" name="uri" size="35" />
+					<input type="submit" value="Ir" />
 				</form>
 				</div>
 			</div>
