--- a/Remote/pt-br/searchNew.htm
+++ b/Remote/pt-br/searchNew.htm
@@ -7,7 +7,7 @@
 		<form method="get" action="newsearch">
 
 			<label>Procurar por:</label>
-					<input type="text" name="search" class="regularinput" /><br />
+					<input type="text" name="search" class="regularinput" /><br/>
 			<label>Tipo de arquivo:</label>
 					
 						<select name="schema" class="regularinput">
@@ -15,6 +15,6 @@
 							<%= schema_option_list %>
 						</select>
 				<br />
-						<input type="submit" value="Iniciar Busca">
+						<input type="submit" value="Iniciar Busca" />
 		</form>
 	</div>
