--- a/Remote/en/searchNew.htm
+++ b/Remote/en/searchNew.htm
@@ -7,7 +7,7 @@
 		<form method="get" action="newsearch">
 
 			<label>Search for:</label>
-					<input type="text" name="search" class="regularinput" /><br />
+					<input type="text" name="search" class="regularinput" /><br/>
 			<label>File type:</label>
 					
 						<select name="schema" class="regularinput">
@@ -15,6 +15,6 @@
 							<%= schema_option_list %>
 						</select>
 				<br />
-						<input type="submit" value="Start Search">
+						<input type="submit" value="Start Search" />
 		</form>
 	</div>
