--- a/Remote/it/downloadsTop.htm
+++ b/Remote/it/downloadsTop.htm
@@ -5,22 +5,22 @@
 	<div id="functions"><a href="?refresh=<%= random %>">Ricarica pagina</a></div>
 		<div id="filters">	
 			<form method="get" action="" ID="Form1">
-						<input type="hidden" name="filter_set" value="1" ID="Hidden1">
+						<input type="hidden" name="filter_set" value="1" ID="Hidden1" />
 						<b>Filtro:</b>
-						<input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %>>
+						<input type="checkbox" id="filter_active" name="filter_active" value="1" <%= filter_active %> />
 						<label for="filter_active">Attivo</label>
-						<input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %>>
+						<input type="checkbox" id="filter_queued" name="filter_queued" value="1" <%= filter_queued %> />
 						<label for="filter_queued">Accodato</label>
-						<input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %>>
+						<input type="checkbox" id="filter_sources" name="filter_sources" value="1" <%= filter_sources %> />
 						<label for="filter_sources">Nessuna fonte</label>
-						<input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %>>
+						<input type="checkbox" id="filter_paused" name="filter_paused" value="1" <%= filter_paused %> />
 						<label for="filter_paused">In pausa</label>
-						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %>>
+						<input type="checkbox" id="filter_show_all" name="filter_show_all" value="1" <%= filter_show_all %> />
 						<label for="filter_show_all">Mostra tutte le fonti</label>
-						<input type="submit" value=" Imposta "><br />
+						<input type="submit" value=" Imposta " /><br />
 			</form>
 		</div>
-		<br />
+		<br/>
 <table>
 	<tr>
 				<th>Nome del file</th>
