--- a/Remote/it/home.htm
+++ b/Remote/it/home.htm
@@ -17,7 +17,7 @@
 				<div style="text-align: right;">
 				<form method="get" action="newsearch" ID="Form1">
 					<label>Ricerca veloce:</label>
-					<input type="text" name="search" size="20">
+					<input type="text" name="search" size="20" />
 					<select name="schema">
 						<option value="">Qualsiasi file</option>
 						<option value="http://www.shareaza.com/schemas/application.xsd">Applicazione</option>
@@ -35,12 +35,12 @@
 						<option value="http://www.limewire.com/schemas/video.xsd">Video</option>
 						<option value="http://www.shareaza.com/schemas/wordProcessing.xsd">Documento di testo</option>
 					</select>
-					<input type="submit" value="Vai">
+					<input type="submit" value="Vai" />
 				</form><br />
 				<form method="get" action="newdownload" ID="Form2">
 					<label>Scarica magnet/torrent:</label>
-					<input type="text" name="uri" size="35">
-					<input type="submit" value="Vai">
+					<input type="text" name="uri" size="35" />
+					<input type="submit" value="Vai" />
 				</form>
 				</div>
 			</div>
