--- a/Remote/it/login.htm
+++ b/Remote/it/login.htm
@@ -11,23 +11,25 @@
 <!-- /tabs -->
 <!-- main body -->
 		<div class="poetry" id="frame">
-					<div class="padding left">
-						Benvenuto nell'<b>Interfaccia web di Shareaza.</b> Se questa copia di Shareaza è in esecuzione sul tuo PC, immetti i relativi username e password, poi clicca su <b>Login</b>.
-					</div>
-					
-					<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
-					<%? failure %>	Il nome utente o la password immessi non sono corretti, riprova ancora.<%?%>
-					</div>
-					
-					<div style="text-align: right; width: 24em; margin: 0 auto;">
-					<form method="get" action="">
-					<input type="hidden" name="submit" value="1">
+			<div class="padding left">
+				Benvenuto nell'<b>Interfaccia web di Shareaza.</b> Se questa copia di Shareaza è in esecuzione sul tuo PC, immetti i relativi username e password, poi clicca su <b>Login</b>.
+			</div>
+
+			<div class="poetry" style="color: red; font-weight: bold; height: 3em;">
+				<%? failure %>	Il nome utente o la password immessi non sono corretti, riprova ancora.<%?%>
+			</div>
+
+			<div style="text-align: right; width: 24em; margin: 0 auto;">
+				<form method="get" action="">
+					<table><tr><td>
+						<input type="hidden" name="submit" value="1" />
 						<label>Nome utente:</label>
 						<input type="text" name="username" size="20" /><br />
 						<label>Password:</label>
-						<input type="password" name="password" size="20" ID="Text1" /><br />
-								<input type="submit" value="Login">
-					</form>
-					</div>
-	</div>
+						<input type="password" name="password" size="20" /><br />
+						<input type="submit" value="Login" />
+					</td></tr></table>
+				</form>
+			</div>
+		</div>
 <!-- /main body -->
