--- a/Remote/lt/home.htm
+++ b/Remote/lt/home.htm
@@ -15,7 +15,7 @@
 			<div style="float: right; width: 40em;">
 				<h3>Pradėti siųstis:</h3>
 				<div style="text-align: right;">
-				<form method="get" action="newsearch" ID="Form1">
+				<form method="get" action="newsearch">
 					<label>Greita paieška:</label>
 					<input type="text" name="search" size="20" />
 					<select name="schema">
@@ -37,7 +37,7 @@
 					</select>
 					<input type="submit" value="Pirmyn" />
 				</form><br />
-				<form method="get" action="newdownload" ID="Form2">
+				<form method="get" action="newdownload">
 					<label>Magnet/Torrent atsisiuntimas:</label>
 					<input type="text" name="uri" size="35" />
 					<input type="submit" value="Pirmyn" />
