--- a/Remote/chs/home.htm
+++ b/Remote/chs/home.htm
@@ -15,7 +15,7 @@
 			<div style="float: right; width: 40em;">
 				<h3>开始下载:</h3>
 				<div style="text-align: right;">
-				<form method="get" action="newsearch" ID="Form1">
+				<form method="get" action="newsearch">
 					<label>快速搜索:</label>
 					<input type="text" name="search" size="20" />
 					<select name="schema">
@@ -37,7 +37,7 @@
 					</select>
 					<input type="submit" value="开始" />
 				</form><br />
-				<form method="get" action="newdownload" ID="Form2">
+				<form method="get" action="newdownload">
 					<label>磁力/种子下载:</label>
 					<input type="text" name="uri" size="35" />
 					<input type="submit" value="开始" />
