--- a/Remote/lt/downloadsFooter.htm
+++ b/Remote/lt/downloadsFooter.htm
@@ -1,12 +1,13 @@
-﻿<!--downloadsFooter-->
-<br>
-<form method="get" action="newdownload" ID="Form1">
-	<div>
-			<label>Magnet:</label>
-			<input type="text" name="uri" size="50" />
-			<input type="submit" value="Pirmyn" />
+﻿
+<!--downloadsFooter-->
+		<br/>
+		<form method="get" action="newdownload">
+			<div>
+				<label>Magnet:</label>
+				<input type="text" name="uri" size="50" />
+				<input type="submit" value="Pirmyn" />
+			</div>
+		</form>
 	</div>
-</form>
-</div>
 </div>
 <!--/downloadsFooter-->
