replaced table with div(table broke alignment)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6254 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Remote/en/login.htm
+++ b/Remote/en/login.htm
@@ -21,14 +21,14 @@
 
 			<div style="text-align: right; width: 24em; margin: 0 auto;">
 				<form method="get" action="">
-					<table><tr><td>
+					<div>
 						<input type="hidden" name="submit" value="1" />
 						<label>Username:</label>
 						<input type="text" name="username" size="20" /><br />
 						<label>Password:</label>
 						<input type="password" name="password" size="20" /><br />
 						<input type="submit" value="Login" />
-					</td></tr></table>
+					</div>
 				</form>
 			</div>
 		</div>
